# cable_routing_drake

./: .gitmodules  pyproject.toml  readme.md
cable_routing/: env.py  models.py  sdf.py  systems.py
models/nist_board/: nist_board.ply  nist_board.sdf
models/wedge_gripper/: wedge.sdf
